--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,8 @@
 // For format details, see https://aka.ms/devcontainer.json.
 {
 	"name": "Dapr - .NET SDK",
+	"context": "..",
 	"dockerFile": "Dockerfile",
-
-	// Use this environment variable if you need to bind mount your local source code into a new container.
-	"remoteEnv": {
-		"LOCAL_WORKSPACE_FOLDER": "${localWorkspaceFolder}"
-	},
 	
 	// Set *default* container specific settings.json values on container create.
 	"settings": {
@@ -20,6 +16,10 @@
 		"ms-dotnettools.csharp"
 	],
 
+	"mounts": [ 
+		"source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind",
+	],
+
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 
@@ -27,5 +27,5 @@
 	"postCreateCommand": "dapr init",
 
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "vscode"
+	// "remoteUser": "vscode"
 }
