--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,6 @@
 // For format details, see https://aka.ms/devcontainer.json.
 {
 	"name": "Dapr - .NET SDK",
-	"context": "..",
 	"dockerFile": "Dockerfile",
 	
 	// Set *default* container specific settings.json values on container create.
@@ -27,5 +26,5 @@
 	"postCreateCommand": "dapr init",
 
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	// "remoteUser": "vscode"
+	 "remoteUser": "vscode"
 }
