--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,5 @@
 # Base container
-FROM mcr.microsoft.com/dotnet/runtime:5.0.2
+FROM mcr.microsoft.com/dotnet/sdk:5.0.102-1
 
 # Avoid warnings by switching to noninteractive
 ENV DEBIAN_FRONTEND=noninteractive
