--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -48,20 +48,22 @@ jobs:
           install-3: true
           display-name: '.NET Core 3.1'
           framework: 'netcoreapp3.1'
+          prefix: 'netcoreapp31'
         - dotnet-version: '5.0'
           install-3: false
           display-name: '.NET 5.0'
           framework: 'net5'
+          prefix: 'net5'
     steps:
     - uses: actions/checkout@v1
     - name: Parse release version
       run: python ./.github/scripts/get_release_version.py
-    - name: Setup .NET Core
+    - name: Setup .NET Core 3.1
       uses: actions/setup-dotnet@v1
       if: matrix.install-3
       with:
         dotnet-version: 3.1.x
-    - name: Setup .NET Core 5.0
+    - name: Setup .NET 5.0
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
@@ -76,7 +78,7 @@ jobs:
           --framework ${{ matrix.framework }} \
           --no-build \
           --no-restore \
-          --logger trx \
+          --logger "trx;LogFilePrefix=${{ matrix.prefix }}" \
           --logger "GitHubActions;report-warnings=false" \
           --results-directory "${{ github.workspace }}/TestResults" \
           /p:CollectCoverage=true \
