--- a/examples/Workflow/WorkflowWebApp/WorkflowWebApp.csproj
+++ b/examples/Workflow/WorkflowWebApp/WorkflowWebApp.csproj
@@ -7,6 +7,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
 
