--- a/examples/Workflow/WorkflowWebApp/WorkflowWebApp.csproj
+++ b/examples/Workflow/WorkflowWebApp/WorkflowWebApp.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>10.0</LangVersion>
   </PropertyGroup>
 
 
