--- a/.github/workflows/itests.yml
+++ b/.github/workflows/itests.yml
@@ -69,7 +69,7 @@ jobs:
         uses: actions/checkout@v2
         if: env.DAPR_REF != ''
         with:
-          repository: dapr/dapr
+          repository: RyanLettieri/dapr #TODO, REMOVE ONCE TESTING IS DONE
           ref: ${{ env.DAPR_REF }}
           path: dapr
       - name: Build and override dapr cli with referenced commit.
