Changes required to solve issue 1032
Signed-off-by: ondmal <72741213+ondmal@users.noreply.github.com>

--- a/src/Dapr.Workflow/Dapr.Workflow.csproj
+++ b/src/Dapr.Workflow/Dapr.Workflow.csproj
@@ -10,6 +10,9 @@
     <VersionPrefix>0.1.0</VersionPrefix>
     <VersionSuffix>alpha</VersionSuffix>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Include="..\Shared\DaprDefaults.cs" Link="DaprDefaults.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.DurableTask.Client.Grpc" Version="1.0.0" />
