--- a/src/Dapr.Workflow/Dapr.Workflow.csproj
+++ b/src/Dapr.Workflow/Dapr.Workflow.csproj
@@ -13,8 +13,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.DurableTask.Client.Grpc" Version="1.0.0" />
-    <PackageReference Include="Microsoft.DurableTask.Worker.Grpc" Version="1.0.0" />
+    <PackageReference Include="Microsoft.DurableTask.Client.Grpc" Version="1.0.*" />
+    <PackageReference Include="Microsoft.DurableTask.Worker.Grpc" Version="1.0.*" />
   </ItemGroup>
 
   <ItemGroup>
