--- a/test/Dapr.Actors.Generators.Test/Dapr.Actors.Generators.Test.csproj
+++ b/test/Dapr.Actors.Generators.Test/Dapr.Actors.Generators.Test.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFrameworks>net6;net7</TargetFrameworks>
     <LangVersion>10.0</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
