--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -2,6 +2,8 @@
   <Import Project="$(MSBuildThisFileDirectory)..\properties\dapr_managed_netcore.props" />
 
   <PropertyGroup>
+    <TargetFrameworks>net6;net7;net8</TargetFrameworks>
+
     <!-- Set Output Path for tests-->
     <OutputPath>$(RepoRoot)bin\$(Configuration)\test\$(MSBuildProjectName)\</OutputPath>
 
