--- a/src/Dapr.Workflow/Dapr.Workflow.csproj
+++ b/src/Dapr.Workflow/Dapr.Workflow.csproj
@@ -2,7 +2,8 @@
 
   <!-- NuGet configuration -->
   <PropertyGroup>
-    <TargetFrameworks>net6;net7</TargetFrameworks>
+    <!-- NOTE: Workflows targeted .NET 7 (whereas other packages did not, so we must continue until .NET 7 EOL). -->
+    <TargetFrameworks>net6;net7;net8</TargetFrameworks>
     <Nullable>enable</Nullable>
     <PackageId>Dapr.Workflow</PackageId>
     <Title>Dapr Workflow Authoring SDK</Title>
