--- a/examples/Client/Cryptography/Cryptography.csproj
+++ b/examples/Client/Cryptography/Cryptography.csproj
@@ -16,4 +16,10 @@
       <ProjectReference Include="..\..\..\src\Dapr.Client\Dapr.Client.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="file.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
